--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,2 +1,22 @@
 ---
 ---
+
+@inproceedings{asiacrypt-2023-33515,
+    title={On the (Im)plausibility of Public-Key Quantum Money from Collision-Resistant Hash Functions},
+    publisher={Springer-Verlag},
+    author={Prabhanjan Ananth and Zihan Hu and Henry Yuen},
+    year={2023},
+    url={https://eprint.iacr.org/2023/069},
+    html={https://arxiv.org/abs/2301.09236},
+    selected={true}
+}
+
+@misc{chen2023hardness,
+    title={On the Hardness of $\sf{S|LWE\rangle}$ with Gaussian and Other Amplitudes}, 
+    author={Yilei Chen and Zihan Hu and Qipeng Liu and Han Luo and Yaxin Tu},
+    year={2023},
+    eprint={2310.00644},
+    archivePrefix={arXiv},
+    primaryClass={quant-ph},
+    selected={true}
+}
