--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,20 +3,21 @@
 
 @inproceedings{asiacrypt-2023-33515,
     title={On the (Im)plausibility of Public-Key Quantum Money from Collision-Resistant Hash Functions},
-    publisher={Springer-Verlag},
-    author={Prabhanjan Ananth and Zihan Hu and Henry Yuen},
+    author={Anath, Prabhanjan and Hu, Zihan and Yuen, Henry},
+    journal={Asiacrypt 2023},
     year={2023},
-    url={https://eprint.iacr.org/2023/069},
-    html={https://arxiv.org/abs/2301.09236},
+
+    arxiv={2301.09236},
+    slides={PKQM/Asiacrypt_slides.pdf},
     selected={true}
 }
 
 @misc{chen2023hardness,
-    title={On the Hardness of $\sf{S|LWE\rangle}$ with Gaussian and Other Amplitudes}, 
-    author={Yilei Chen and Zihan Hu and Qipeng Liu and Han Luo and Yaxin Tu},
+    title={On the Hardness of S|LWE> with Gaussian and Other Amplitudes}, 
+    author={Chen, Yilei and Hu, Zihan and Liu, Qipeng and Luo, Luo and Tu, Yaxin},
+    journal={arXiv preprint arXiv:2310.00644},
     year={2023},
-    eprint={2310.00644},
-    archivePrefix={arXiv},
-    primaryClass={quant-ph},
+
+    arxiv= {2310.00644},
     selected={true}
 }
