don't try math in abstract anymore

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,6 @@
     <p>To this end, Chen, Liu, and Zhandry [Eurocrypt 2022] define the S|LWE⟩ problem, which encodes the error of LWE samples into quantum amplitudes. They then show efficient quantum algorithms for S|LWE⟩ with a few interesting amplitudes. However, the hardness of the most interesting amplitude, Gaussian, was not addressed by Chen et al., or only known for some restricted settings (for example, when the number of S|LWE⟩ samples is very small, it is well known that S|LWE⟩ is as hard as standard LWE).
     In this paper, we show new hardness and algorithms for S|LWE⟩ with Gaussian and other amplitudes. Our main results are</p>
     <p>1. There exist quantum reductions from standard LWE or worst-case GapSVP to S|LWE⟩ with Gaussian amplitude with unknown phase, and arbitrarily many S|LWE⟩ samples.</p>
-    <p>2. There is a $$2^{ \tilde{O} \left( \sqrt{n} \right)}$$-time algorithm for S|LWE⟩ with Gaussian amplitude with known phase, given $$2^{\tilde{O}\left(\sqrt{n}\right)}$$ many quantum samples. The algorithm is modified from Kuperberg's sieve, and in fact works for more general amplitudes as long as the amplitudes and phases are completely known.</p>
+    <p>2. There is a 2^{\tilde{O}(\sqrt{n})}-time algorithm for S|LWE⟩ with Gaussian amplitude with known phase, given 2^{\tilde{O}(\sqrt{n})} many quantum samples. The algorithm is modified from Kuperberg's sieve, and in fact works for more general amplitudes as long as the amplitudes and phases are completely known.</p>
     <p>One way of interpreting our result is: to show a sub-exponential time quantum algorithm for standard LWE, all we need is to handle phases in S|LWE⟩ amplitudes better, either in the algorithm or the reduction.</p>}
 }
