--- a/_posts/2023-06-24-graduate.md
+++ b/_posts/2023-06-24-graduate.md
@@ -5,7 +5,7 @@ date: 2023-06-24 08:00:00
 description: It is great to meet you all during my undergraduate!
 tags: 
 categories: photography
-thumbnail: assets/pictures/WithYileiAndYifan.JPG
+thumbnail: assets/pictures/WithYileiAndYifan.jpg
 ---
 
 <p> It is my honor to graduate from Yao Class. </p>
@@ -22,7 +22,7 @@ thumbnail: assets/pictures/WithYileiAndYifan.JPG
 
 <div class="row justify-content-sm-center">
     <div class="col-sm-8 mt-3 mt-md-0">
-        {% include figure.html path="assets/pictures/WithYileiAndYifan.JPG" title="" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.html path="assets/pictures/WithYileiAndYifan.jpg" title="" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
     <div class="col-sm-4 mt-3 mt-md-0">
         {% include figure.html path="assets/pictures/WithKaiSheng.JPG" title="" class="img-fluid rounded z-depth-1" zoomable=true %}
